# fastapi-restful-rsp

./: pyproject.toml
.github/workflows/: lint-test.yml  publish.yml  python-package.yml
fastapi_restful_rsp/: custom_decorator.py  models.py
tests/: test_custom_decorator.py  test_decorator.py
