[tool.poetry]
name = "fastapi-restful-rsp"
version = "0.1.0"
description = ""
authors = ["paleneutron <paleneutron@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
